--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import Logo from './Logo.astro'
   <Logo />
   <div class="flex items-center mt-2">
     <span class="text-2xl text-slate font-extrabold mr-1">ChatGPT</span>
-    <span class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600">Demo</span>
+    <span class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600">国内版-免费给大家使用</span>
   </div>
-  <p mt-1 text-slate op-60>Based on OpenAI API (gpt-3.5-turbo).</p>
+  <p mt-1 text-slate op-60>基于OpenAI API 最新版制作，稳定可靠！(gpt-3.5-turbo).</p>
 </header>
